--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #database.url=jdbc:mysql://remotemysql.com:3306/8dr1a1aO9r
 #database.username=8dr1a1aO9r
 #database.password=ytLiKudRDY
-#hibernate.dialect = "org.hibernate.dialect.MySQL57Dialect"
+#database.dialect=org.hibernate.dialect.MySQL57Dialect
 
 database.url=jdbc:mysql://localhost:3306/beertag
 database.username=root
 database.password=krasko
-#database.dialect = "org.hibernate.dialect.MariaDB53Dialect"
+database.dialect=org.hibernate.dialect.MariaDB53Dialect
