--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,19 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'mysql:mysql-connector-java'
+
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
+
+    compile('org.springframework.security:spring-security-jwt')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile("org.springframework.security.oauth:spring-security-oauth2")
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+
 }
