--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 dependencies {
 
     compile 'mysql:mysql-connector-java'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 
     /*compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
 
