--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ database.url=jdbc:mysql://localhost:3306/beertag
 database.username=root
 database.password=krasko
 database.dialect=org.hibernate.dialect.MariaDB53Dialect
+spring.jpa.open-in-view =true
