--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ dependencies {
 
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
 
+    // https://mvnrepository.com/artifact/org.modelmapper/modelmapper
+    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'
+
+
     compile('org.springframework.security:spring-security-jwt')
     compile('org.springframework.boot:spring-boot-starter-security')
     compile("org.springframework.security.oauth:spring-security-oauth2")
